--- a/style.css
+++ b/style.css
@@ -1,328 +1,1070 @@
-body {
-    font-family: 'Raleway', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVh4IMjgG106tT8CZrUTz33NwPr-UG2VX-aw&usqp=CAU");
+*{
+  font-family: Raleway;
 }
 
-.whole {
-    width: 100%;
-    padding-top: 50px; /* Adjust for the fixed position of the sidebar */
+.top{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  align-items: center;
 }
 
-.top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background: #fff;
-    border-bottom: 1px solid #ddd;
-    position: relative;
-    z-index: 1000;
+.brand-txt{
+  font-size: 16px;
+  font-family: Raleway;
+  font-weight:600;
 }
 
-.top-left, .top-right {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.top-right{
+  display: flex;
+  flex-direction: row;
+  
 }
 
-.top-left {
-    flex: 1;
+.user-button{
+  border:none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.top-right {
-    display: flex;
-    align-items: center;
-    gap: 15px;
+.user-img{
+  width:25px;
+  
 }
 
-.top-img-center {
-    flex: 2;
-    text-align: center;
+
+
+
+.middle-header{
+  display:flex;
+  flex-direction:row;
+  width:80%;
+  justify-self: center;
+  justify-content: space-around;
+  border-radius: 25px;
+  background-color: ghostwhite ;
+  margin-bottom: 20px;
 }
 
-.top-img-center img {
-    max-width: 100%;
-    height: auto;
+.middle-header .txt{
+  padding: 5px 10px;
+  font-size: 20px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-.cart-icon, .profile img {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+.middle-header .txt:hover{
+  padding: 5px 10px;
+  border-radius: 20px;
+  background-color: white;
+  color: black ;
 }
 
-.main-div {
-    margin-left: 0; /* Default margin for larger screens */
+
+
+.big-div{
+  padding: 100px 100px;
+  background-color: steelblue;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  position: relative;
 }
 
-.big-img img {
-    width: 100%;
-    height: auto;
+.big-div p{
+  position: absolute;
+  font-size:20px;
+  color: white;
+  top:1px;
+  right:5px;
 }
 
-.pic-txt {
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    color: #fff;
-    white-space: nowrap;
+.welcome-txt{
+  display: none;
 }
 
-.big-img-txt {
-    font-size: 3em;
-    font-weight: bold;
-    line-height: 1.2;
+.slide .img1{
+  position: absolute;
+  width:380px;
+  bottom:-2px;
+ right:19px;
 }
 
-.big-img-button {
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    transform: translateY(-50%);
+.slide .img2{
+
+  bottom:-24px;
+  
 }
 
-.shop-button {
-    background-color: #f5f5dc;
-    color: #000;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 1em;
-    font-weight: bold;
-    display: inline-block;
-    transition: transform 0.3s ease, padding 0.3s ease;
+.slide .img3{
+  position: absolute ;
+  width: 450px;
+ bottom: -10px;
+  
 }
 
-.shop-button:hover {
-    transform: scale(1.1);
-    padding: 15px 30px;
+.welcome-1{
+  position: absolute;
+  top:120px;
+  left:15px;
 }
 
-.dnd-img {
-    position: relative;
+.welcome-1 .head{
+  font-size:70px;
+  color:white;
 }
 
-.big-img2 {
-    width: 100%;
-    height: auto;
-}
-
-.cover-text {
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translateY(-50%);
-    color: #fff;
-}
-
-.cover-1 {
-    font-size: 1.5em;
-    font-weight: bold;
-}
-
-.cover-2 {
-    font-size: 2em;
-    font-weight: bold;
-}
-
-.cover-button {
-    margin-top: 20px;
-}
-
-.cover-butt {
-    background-color: #f5f5dc;
-    color: #000;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 1em;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.mul-img {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    padding: 20px;
-}
-
-.img1-grid {
-    position: relative;
-}
-
-.img-1 {
-    width: 100%;
-    height: auto;
-}
-
-.img1-text-button {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    background-color: rgba(245, 245, 220, 0.8);
-    color: #000;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 0.9em;
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-}
-
-.alone-txt2, .alone-txt3 {
-    text-align: center;
-    padding: 20px;
-    font-size: 1.5em;
-    font-weight: bold;
-}
-
-.alone-txt3 {
-    margin-top: 10px;
-}
-
-.alone-txt3-link {
-    color: #000;
-    font-weight: normal;
-}
-
-.contact1-div {
-    background: #fff;
-    padding: 20px;
-    border-top: 1px solid #ddd;
-}
-
-.email-div {
-    text-align: center;
-}
-
-.sub-txt {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-}
-
-.email {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.email-box {
-    padding: 10px;
-    font-size: 1em;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-.submit-box {
-    background-color: #f5f5dc;
-    color: #000;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 1em;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.contact-total {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.contact-div, .contact-div1, .Social-div {
-    flex: 1;
-}
-
-.logo-div {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.img-4 img {
-    width: 50px;
-    height: auto;
-}
-
-.img-4-txt {
-    text-align: left;
-}
-
-.phone-txt, .email2-txt {
-    font-size: 1em;
-}
-
-.bottom1-head {
-    font-size: 1.5em;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.bottom2 {
-    font-size: 1em;
-    margin-bottom: 5px;
-}
-
-.social-icon a {
-    font-size: 1.5em;
-    margin: 0 5px;
-    color: #000;
-}
-
-.hamburger {
+@media (min-width: 1104px) {
+  
+  .welcome-1{
     display: none;
-    cursor: pointer;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 1001;
+  }
+  
+  .welcome-txt{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width:510px;
+    right:30px;
+    top:380px;
+   color: white ;
+    z-index: 60px;
+  }
+  
+  .welcome-txt .head{
+    font-size:50px;
+    font-weight: 800px;
+  }
+  
+  .welcome-txt .body{
+    font-size: 25px;
+  }
+  
+  .big-div{
+   
+    height:200px;
+  }
+  
+  .big-div p{
+    font-size: 50px;
+  }
+  
+  .slide .img1{
+    width:720px;
+    left:50px;
+  }
+  
+  .slide.img2{
+    width:350px;
+  }
+  
+  .slide .img3{
+    width:800px;
+  }
 }
 
-.hamburger .bar {
-    width: 30px;
-    height: 3px;
-    background: #000;
-    margin: 6px 0;
-    transition: 0.3s;
+
+.mini-div{
+  
 }
 
-.sidebar {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    background: #fff;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.3);
-    padding: 20px;
-    z-index: 1000;
-    overflow-y: auto;
-    transition: transform 0.3s ease;
-    transform: translateX(-100%);
+
+.mini-div .img-dock{
+  padding: 50px 25px;
+  background-color: aliceblue;
+  border-radius: 15px;
+  position: relative;
+  margin-bottom: 5px;
 }
 
-.sidebar.active {
-    display: block;
-    transform: translateX(0);
+@media (min-width: 1104px) {
+   .mini-div  {
+     display:flex;
+     flex-direction: row;
+     justify-content: space-between;
+     width:100%;
+   }
+   
+   .mini-div .img-dock{
+     height:100px;
+     width:60%;
+     
+   }
+   
+   .mini-div .desktop{
+  
+   }
+   
+     .mini-div .desktop {
+    display: flex ;
+      flex-direction: row;
+      justify-content: space-between;
+     align-items: center;
+    width:30%;
+      background-color: lemonchiffon;
+}
+    
+    .desktop-price-off{
+      font-size: 40px;
+      color:red;
+      font-weight:bolder;
+      margin-top:0px;
+    }
+    
+    .desktop-only-txt{
+      font-size:35px;
+      margin-bottom: 0px;
+      font-weight: bold;
+    }
+    
+    .desktop-img{
+      width:250px;
+    }
+   
+   
 }
 
 @media (max-width: 768px) {
-    .top-left, .top-right {
-        display: none;
+      .mini-div .desktop {
+        display:none;
+      
+      }
     }
-    
-    .hamburger {
-        display: block;
-    }
-    
-    .main-div {
-        margin-left: 0;
-    }
+
+
+.img-dock:hover{
+  
 }
+
+.scroller{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+.slider-container {
+  background-color: transparent;
+  position: absolute;
+  width: 100%;
+  max-width: 800px;
+  overflow: hidden;
+  border-radius: 10px;
+  width:450px;
+  bottom:-12px;
+  right:10px;
+}
+
+
+@media (min-width:1104px) {
+  .slider-container{
+    left:20px;
+    width:800px;
+  }
+  
+  .prev-btn{
+    left: -20px;
+  }
+  
+  .next-btn{
+    right: -20px;
+  }
+  
+  .arrow-icon{
+    width: 300px;
+  }
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  ;
+}
+
+.slide {
+  min-width: 100%;
+  box-sizing: border-box;
+  
+}
+
+.slide img {
+  width: 100%;
+  border: none;
+}
+
+.slider-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 20;
+}
+
+.prev-btn {
+  left: -10px;
+}
+
+.next-btn {
+  
+  right: -10px;
+}
+
+
+.arrow-icon{
+  width: 25px;
+}
+
+
+.arrow-icon:hover{
+  
+}
+
+
+.daily-offer{
+  display: none ;
+}
+
+@media (min-width:1104px) {
+  
+  .daily-offer{
+    display:flex;
+    flex-direction: row;
+    width:100%;
+    justify-content: space-evenly;
+    margin-top:300px;
+  }
+  
+  .daily-offer-div1 .head{
+    font-size: 40px;
+    font-weight: bolder;
+  }
+  
+  .daily-offer-div1 .body{
+    font-size: 25px;
+    
+  }
+  
+  
+  .daily-offer-div1{
+    display:flex;
+    flex-direction: column;
+    width:30%;
+  }
+  
+
+  
+  .daily-offer-div2{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width:65%;
+  }
+  
+    .offer1{
+      display: flex;
+      flex-direction: column;
+    width:290px;
+    height:300px;
+    background-color: navajowhite;
+    border-radius: 20px;
+  }
+  
+  .offer-sale{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  
+  .offer-sale .txt1{
+    font-size: 28px;
+    align-content: center;
+    font-weight: bolder;
+  }
+  
+  .daily-btn{
+      padding: 15px 50px;
+  background-color: dimgrey;
+  color:white;
+  border-radius: 25px;
+  font-size:25px;
+  border:none;
+  }
+  
+  .offer-sale .txt2{
+    font-size:23px;
+    font-weight:400px;
+    padding: 10px 10px;
+    background-color: white;
+    border-radius: 30px;
+  }
+  
+  .offer1-img{
+    align-self: center;
+    width:220px;
+   
+  }
+  
+  .offer2{
+    display:flex;
+    flex-direction: column;
+    width:470px;
+    height:320px;
+    background-color: darkgray;
+    border-radius: 20px;
+  }
+  
+  .offer2-img{
+    width:400px;
+    height:250px;
+  }
+}
+
+
+.mini-island{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top:100px;
+  margin-bottom: 50px;
+}
+
+.island{
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  height: 120px;
+  background-color: floralwhite;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.mini-island .desktop{
+  display: none;
+}
+
+.island:hover{
+  background-color: antiquewhite;
+}
+
+.mini-island p{
+  font-size: 12px;
+}
+
+.island-img{
+  width:70px;
+ 
+}
+
+@media (min-width:1104px) {
+  
+  .mini-island{
+    margin-top:300px;
+  }
+  
+   .mini-island .desktop{
+     display: flex;
+   }
+   
+   .island {
+     width:150px;
+     height:170px;
+   }
+   
+   .mini-island p{
+     font-size:30px;
+   }
+   
+   .island-img{
+     width:120px;
+   }
+   
+}
+
+
+.scroll{
+  display: block;
+}
+
+
+.season-section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+
+
+.season-img{
+
+}
+
+.season-img{
+  width:230px;
+  height:200px;
+  border-radius:15px;
+}
+
+.season-txt{
+  display: flex;
+  flex-direction: column;
+  margin-left:15px;
+}
+
+.season-txt .head{
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.season-txt .body{
+  font-size: 11px;
+}
+
+.season-button{
+  padding: 5px 10px;
+  background-color: skyblue;
+  color:white;
+  border-radius: 15px;
+  font-size:12px;
+  border:none;
+}
+
+@media (min-width:1104px) {
+  
+  .season-section{
+    margin-top:300px;
+  }
+  
+  .season-img {
+    width:530px;
+    height:500px;
+  }
+  
+  .season-txt .head{
+    font-size:50px;
+  }
+  
+  .season-txt .body{
+    font-size: 20px;
+  }
+  
+  .season-button{
+    padding: 15px 50px;
+  background-color: tomato;
+  color:white;
+  border-radius: 25px;
+  font-size:25px;
+  border:none;
+  }
+}
+
+
+.specials{
+  margin-top:100px;
+}
+
+.specials-head-txt{
+  font-size:30px;
+  font-weight: bolder;
+}
+
+.specials-head-txt .body {
+  font-size: 14px;
+}
+
+.flexbox-holder{
+  display: flex;
+  flex-direction: column;
+  margin-top:30px;
+  margin-bottom:10px;
+}
+
+.flexbox1{
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  margin-top:20px;
+}
+
+.holder-small{
+  display: flex;
+  flex-direction: column;
+  width:150px;
+  background-color: beige;
+  border-radius: 15px;
+}
+
+.small{
+    display:flex;
+  justify-content: center;
+}
+
+.holder-big{
+  display: flex;
+  flex-direction: column;
+  width:300px;
+  background-color: lightgrey;
+  border-radius: 15px;
+}
+
+@media (min-width:1104px) {
+  
+  .specials{
+   margin-top:300px;
+    margin-bottom:300px;
+  }
+  
+  .specials-head-txt{
+    margin-bottom: 100px
+  }
+  
+  .specials-head-txt p{
+    font-size: 50px;
+  }
+  
+  .specials-head-txt .body{
+    font-size:20px;
+    font-weight: 100px;
+  }
+  .holder-small{
+    width: 400px;
+    height:350px;
+  }
+ 
+  
+  .holder-big{
+    width:800px;
+    height:500px;
+  }
+  
+
+}
+
+.big{
+  display:flex;
+  justify-content: center;
+}
+
+.specials-img-1{
+  width:150px;
+  height:150px;
+ 
+}
+
+.specials-img-2{
+  width: 250px;
+  height:150px;
+ 
+}
+
+.specials-buttom{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin:0px;
+  margin-left:5px;
+  margin-right:5px;
+}
+
+.img-desc{
+  display:flex;
+  flex-direction: column;
+}
+
+
+
+.desc-name{
+  margin:0px;
+  font-size:13px;
+  font-family: sans-serif Raleway;
+}
+
+.desc-price{
+  margin:5px;
+  font-size:11px;
+}
+
+
+.heart-png{
+  width:20px;
+}
+
+  
+  .btn{
+    margin-top:20px;
+    margin-bottom:100px;
+    justify-self: center;
+    cursor: pointer;
+  }
+
+.store-button{
+  align-self: center;
+  padding: 6px 8px;
+  background-color: darkorange;
+  color:white;
+  border-radius: 25px;
+  font-size:13px;
+  border:none;
+  }
+
+@media (min-width:1104px) {
+  
+  .specials-img-1{
+    width:300px;
+    height: 250px;
+  }
+  
+  .specials-img-2{
+    width:600px;
+    height:400px;
+  }
+  
+  .desc-name{
+    font-size: 40px;
+  }
+  
+  .desc-price{
+    font-size:25px;
+  }
+  
+  .heart-png{
+    width:50px;
+  }
+  
+  .btn{
+    margin-top:15px;
+    justify-self: center;
+  }
+  
+  .store-button{
+  align-self: center;
+  padding: 10px 12px;
+  background-color: darkorange;
+  color:white;
+  border-radius: 30px;
+  font-size:28px;
+  border:none;
+  }
+}
+
+
+
+.newsletter{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.newsletter-head{
+  
+}
+
+
+.newsletter-and{
+  font-size:18px;
+  font-weight: bold;
+}
+
+.newsletter-grab{
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.newsletter-percent{
+  text-align: center;
+  font-size: 25px;
+  font-weight: bolder;
+  color:red;
+}
+
+.newsletter-off{
+  font-size:22px;
+}
+
+
+
+.newsletter-form{
+  
+}
+
+.email-form{
+  padding-right:40px;
+  padding-left:10px;
+  padding-top:5px;
+  padding-bottom: 5px;
+  font-size: 12px;
+  border-radius: 15px;
+}
+
+.subscribe-button{
+  padding: 10px 20px;
+  background-color: black;
+  color:white;
+  border-radius: 25px;
+  font-size:15px;
+  border:none;
+}
+
+@media (min-width:1104px) {
+  .newsletter{
+    justify-self: center;
+    margin-bottom: 300px;
+  }
+  
+  
+  .newsletter p{
+    font-size: 50px;
+  }
+  
+  
+  .newsletter-and{
+    font-size:32px;
+  }
+  
+  .newsletter-grab{
+    font-size:40px;
+  }
+  
+  .newsletter-off{
+    font-size: 55px;
+  }
+  
+  .newsletter-percent{
+    font-size: 60px;
+  }
+  
+  
+.email-form{
+  width:700px;
+  padding-top:20px;
+  padding-bottom: 20px;
+  padding-left:20px;
+  font-size: 30px;
+  border-radius: 40px;
+}
+
+.subscribe-button{
+  padding: 20px 55px;
+  background-color: black;
+  color:white;
+  border-radius: 50px;
+  font-size:30px;
+  border:none;
+}
+
+ }
+ 
+
+.banner{
+  display:flex;
+  flex-direction: row;
+  background-color: palegoldenrod;
+  border-radius:15px;
+  justify-content: space-around;
+  margin-top:60px;
+  margin-bottom: 60px;
+}
+
+.timer{
+  display:flex;
+  flex-direction: column;
+}
+
+.counter-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.counter{
+  padding: 15px 5px;
+  background-color: white;
+  font-size: 20px;
+  font-weight: bold; 
+}
+
+.banner .txt{
+  font-size:20px;
+  font-weight: 800px;
+  margin-bottom: 0px;
+}
+
+.counter-div .txt{
+  font-size: 10px;
+}
+
+
+
+.banner-img{
+  width:300px;
+}
+
+@media (min-width:1104px) {
+  .banner{
+    margin-bottom: 200px;
+    margin-top:100px;
+  }
+  .banner .txt{
+    font-size:60px;
+  }
+  
+  .counter-div .txt{
+    font-size:20px;
+  }
+  
+  .counter{
+    font-size: 45px
+  }
+  
+  .banner-img{
+    width:700px;
+  }
+}
+
+
+
+
+.footer{
+  display: flex;
+  flex-direction: row;
+    justify-content: space-around;
+}
+
+.brand-txt{
+  font-size:25px;
+  color: blanchedalmond;
+}
+
+.footer .brand{
+  
+}
+
+.in{
+  display:flex;
+  flex-direction: column;
+}
+
+
+.contact-button{
+  padding: 6px 8px;
+  background-color: black;
+  color:white;
+  border-radius: 25px;
+  font-size:13px;
+  border:none;
+}
+
+.footer-head{
+  font-size:15px;
+  font-weight: bolder;
+}
+
+.footer-txt{
+  font-size: 12px;
+  text-decoration: none;
+  color: lightslategray;
+}
+
+.links{
+  display: flex;
+  flex-direction: column;
+  border-bottom: 3px skyblue dashed;
+}
+
+
+.link {
+
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+
+.Contacts{
+  display: flex;
+  flex-direction: column;
+  border-bottom: 3px red dashed;
+}
+
+
+.contact-txt{
+  font-size: 12px;
+}
+
+
+.Customer-Service{
+  display: flex;
+  flex-direction: column;
+  border-bottom: 3px mediumpurple dashed;
+}
+
+.customer-txt{
+   font-size: 14px;
+   font-weight: 600px;
+}
+
+
+
+.uhh-footer{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  border-top: 4px skyblue inset;
+  margin-top:10px;
+}
+
+
+@media (min-width:1104px) {
+  .footer{
+    border-top: 4px red dashed;
+    flex-direction: row;
+  }
+  
+  .in{
+    justify-content: space-around;
+    flex-direction: column;
+  }
+  
+  .brand-txt{
+    font-size: 60px;  
+  }
+  
+  .brand-desc{
+     font-size: 40px;
+  }
+  
+  .contact-button{
+      padding: 6px 8px;
+      width:200px;
+  background-color: black;
+  color:white;
+  border-radius: 35px;
+  font-size:33px;
+  border:none;
+  }
+  
+  .contact-txt{
+    font-size:25px;
+  }
+  
+   .footer-head{
+    font-size:30px;
+  }
+  
+  .footer-txt{
+    font-size:25px;
+  }
+  
+  
+  
+  
+}
+
+
+
+    
+
